hotfix: final amount
